import("//base/build/ave.gni")
import("//build/config/android/rules.gni")
import("//third_party/jni_zero/jni_zero.gni")

group("android") {
  if (is_android) {
    deps = [
      ":avp_java",
      ":avp_jni",
      ":libavp",
    ]
  }
}

if (is_android) {
  ave_android_library("avp_java") {
    visibility = [ "*" ]
    sources = [
      "api/io/github/yoofa/avp/AudioSink.java",
      "api/io/github/yoofa/avp/AvpPlayer.java",
      "api/io/github/yoofa/avp/DefaultAudioSink.java",
      "api/io/github/yoofa/avp/SeekMode.java",
      "api/io/github/yoofa/avp/TrackInfo.java",
    ]
    deps = [
      ":generated_avp_jni_java",
      "//base/android:ave_base_java",
      "//media/android:ave_media_java",
      "//third_party/androidx:androidx_annotation_annotation_java",
      "//third_party/jni_zero:jni_zero_java",
    ]
  }

  generate_jni("generated_avp_jni") {
    sources = [
      "api/io/github/yoofa/avp/AudioSink.java",
      "api/io/github/yoofa/avp/AvpPlayer.java",
      "api/io/github/yoofa/avp/TrackInfo.java",
    ]
    namespace = "ave::jni"
    jni_generator_include = "//base/android/jni/jni_generator_helper.h"
  }

  ave_library("avp_jni") {
    visibility = [ "*" ]
    sources = [
      "src/jni/avp_player_jni.cc",
      "src/jni/avp_player_jni.h",
      "src/jni/jni_onload.cc",
    ]
    deps = [
      ":generated_avp_jni",
      "//api:player_interface",
      "//base:logging",
      "//base/android:ave_jni",
      "//media/android:ave_media_jni",
      "//media/audio:java_audio_device",
      "//media/codec/android:android_ndk_media_codec",
      "//media/foundation:media_meta",
      "//third_party/jni_zero",
    ]
    libs = [ "android" ]
  }

  # Use shared_library_with_jni so that Release builds (which enable JNI
  # multiplexing) get the generated C++ registration code that defines
  # kJniZeroHashWhole and kJniZeroHashPriority.
  shared_library_with_jni("libavp") {
    output_name = "avp_android"
    sources = []
    deps = [
      ":generated_avp_jni",
      "//base/android:ave_jni",
      "//core:avplayer_builder",
      "//media/android:ave_media_jni",
      "//media/audio:java_audio_device",
      "//media/codec/android:android_ndk_media_codec",
      "//third_party/jni_zero",
    ]

    # ANativeWindow APIs
    libs = [ "android" ]

    # Export Java_* symbols for lazy JNI lookup
    configs -= [ "//build/config/android:hide_all_but_jni_onload" ]
    configs += [ "//build/config/android:hide_all_but_jni" ]

    # Retain JNI entry points with whole-archive
    data_deps = [ ":avp_jni" ]
    ldflags = [
      "-Wl,--whole-archive",
      rebase_path("$root_out_dir/obj/sdk/android/libavp_jni.a", root_build_dir),
      "-Wl,--no-whole-archive",
    ]

    # Point to the APK so the registration scanner can find all @NativeMethods.
    # This doesn't create a problematic build cycle: the jni_registration action
    # has deps=[], so libavp -> libavp__jni_registration -> (nothing), while
    # the jni_sources_list scanner (a separate generated_file target) references
    # the APK for metadata only and doesn't feed back into libavp's build chain.
    java_targets = [ "//examples/android:AvpDemo" ]
  }
}
